--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -11,9 +11,7 @@
   },
   "cordova": {},
   "server": {
-    "url": "http://localhost:8101",
-    "cleartext": true,
-    "originalUrl": "http://localhost:8103",
-    "originalCleartext": true
+    "url": "http://localhost:8100",
+    "cleartext": true
   }
 }
