--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/pwa-elements": "^3.0.2",
     "@ionic/storage": "^2.3.1",
     "@mauron85/cordova-plugin-background-geolocation": "^3.1.0",
     "@ngx-translate/core": "^13.0.0",
