--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "ts.travelsoft.iBusDriverApplcationV1",
+  "appId": "ts.travelsoft.iBusDriverApplcationV001",
   "appName": "iBus-Driver-Application-v1",
   "bundledWebRuntime": false,
   "npmClient": "npm",
@@ -11,7 +11,7 @@
   },
   "cordova": {},
   "server": {
-    "url": "http://192.168.1.3:8101",
+    "url": "http://192.168.1.3:8102",
     "cleartext": true
   }
 }
