--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@mauron85/cordova-plugin-background-geolocation": "^3.1.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "@types/date-fns": "^2.6.0",
     "cordova-plugin-advanced-http": "^3.1.0",
     "cordova-plugin-androidx": "^3.0.0",
     "cordova-plugin-androidx-adapter": "^1.1.3",
@@ -48,7 +49,7 @@
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-whitelist": "^1.3.4",
-    "date-fns": "^2.17.0",
+    "date-fns": "^2.19.0",
     "firebase": "^8.2.6",
     "firebaseui": "^4.7.3",
     "firebaseui-angular": "^5.1.1",
